--- a/web-components/about-me/aboutme.css
+++ b/web-components/about-me/aboutme.css
@@ -5,8 +5,15 @@
 * {
 overflow-wrap:hyphenate.
 }
-  
 
+h1 {
+  width: 800px
+  position: relative;
+  letter-spacing: -1px;
+  font-size: 60px;
+  font-weight: 100;
+  text-shadow: rgb(255, 255, 255) 0px 1px 0px;
+}
 .info {
 	display: table;
 	margin: 0 auto;
